--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,7 @@ nav h1 a {
 #reviews-list {
   margin: 0;
   padding: 0;
+  width: 90%;
 }
 #reviews-list li {
   background-color: #fff;
@@ -282,4 +283,87 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+
+/*================== Media queries ======================*/
+@media(min-width:200px) {
+  #reviews-container {
+     padding-left: 5px;
+  }
+
+  #restaurant-container {
+    padding-left: 5px;
+     padding: 20% 5% 0;
+  }
+
+  #restaurants-name {
+    margin: 25% 0 30px;
+
+  }
+
+  #restaurants-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #restaurants-list li {
+    width: 70%;
+    height: 70%;
+  }
+
+}
+
+@media(min-width:576px) {
+   #restaurants-name {
+     margin: 2% 0 30px;
+   }
+
+  #reviews-container {
+    padding-left: 5px;
+  }
+
+  #restaurant-container{
+    padding-left: 5px;
+  }
+
+  #restaurants-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #restaurants-list li {
+    width: 70%;
+    height: 70%;
+  }
+
+}
+
+@media(min-width:768px) {
+  #reviews-container {
+    padding-left: 5px;
+  }
+
+  #restaurant-container {
+    padding-left: 5px;
+  }
+
+  #restaurants-list li {
+    width: 45%;
+    height: 45%;
+  }
+
+}
+
+@media(min-width:1200px) {
+
+  #restaurants-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #restaurants-list li {
+    width: 30%;
+    height: 30%;
+  }
 }
