--- a/css/styles.css
+++ b/css/styles.css
@@ -1,133 +1,194 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
-}
-body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+body,
+html {
+  font-family: Arial,
+  Helvetica,
+  sans-serif;
+  font-size: 12px;
+  background-color: #fdfdfd;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden !important;
 }
 
-header h1 {
-  padding-top: 1.5%;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 320px;
 }
 
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
+
+body,
+td,
+th,
+p {
+  font-family: Arial,
+  Helvetica,
+  sans-serif;
+  font-size: 12px;
+  color: #424242;
+  line-height: 1.5;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 a {
-	color: orange;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
-a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+
+a:hover,
+a:focus {
+  color: #3397db;
+  text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+
+a img {
+  border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
 }
+
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #252831;
+  color: white;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
 }
+
+header,
+main,
+footer {
+  width: 100%;
+}
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: auto;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
+
 nav h1 {
-  margin: auto;
+  margin: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
+
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 18pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+  padding: 5px 5px;
+  list-style: none;
+  font-size: 18px;
+  font-style: bold;
+  font-weight: 200;
+  margin: 0;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
+  display: inline;
+  color: white;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 3px;
+  color: white;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #0275d8;
 }
+
 /* ====================== Map ====================== */
+
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
   width: 100%;
-  height: 100%;
-  padding: 1% 0;
-  background-color: #3397DB;
+  height: auto;
+  background-color: #252831;
   align-items: center;
+  display: flex;
+  flex-wrap: wrap;
 }
+
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 10px 20px;
+  padding: 5px, 5px;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font-family: Arial, sans-serif;
+  font-size: 1.3rem;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -135,7 +196,13 @@ nav h1 a {
   width: 200px;
 }
 
+.filter-selects {
+  align-items: center-left;
+  margin: 0px 0px;
+}
+
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
@@ -143,45 +210,65 @@ nav h1 a {
   padding: 30px 15px 60px;
   text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: row wrap;
 }
+
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  max-width: 1090px;
-  width: 90%;
+  font-family: Arial, sans-serif;
+  margin: 10px;
+  min-height: 200px;
+  padding: 10px 10px;
+  text-align: center;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  max-height: 200px;
 }
+
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
+  min-height: 40px;
   text-transform: uppercase;
+  text-align: center;
 }
+
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
-#restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
+
+.restaurant-results {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  text-align: center;
+}
+
+
+#restaurants-list li button {
+  background-color: #252831;
+  border-bottom: 3px solid #d3d3d3;
+  border-right: 3px solid #d3d3d3;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
@@ -190,180 +277,231 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  border-radius: 4px;
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
+
+.inside {
+  padding: 3px 3px;
+  background-color: #252831;
+  margin: auto;
+  height: auto;
+  width: auto;
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 320px;
+  overflow-x: hidden !important;
 }
+
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 200px;
+  width: 100%;
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
+  margin: auto;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
+  width: auto;
+  margin: auto;
+}
+
+#restaurant-container {
+  margin: auto;
   width: 100%;
+  height: auto;
+  /* display: flex; */
+  flex-wrap: nowrap;
+  flex-flow: row;
+  justify-content: space-evenly;
+  align-items: baseline;
+  padding: 10px;
 }
-.inside #footer {
-  bottom: 0;
-  position: absolute;
+
+.restaurant-pretty {
   width: 50%;
+  text-align: center;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
+
+.restaurant-info {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: column;
+  justify-content: space-evenly;
+}
+
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-family: Arial, sans-serif;
+  font-size: 18pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 15px 10px;
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 90%;
+  margin: auto;
+  width: 100%;
+  height: auto;
+  align-self: center;
 }
+
 #restaurant-address {
   font-size: 12pt;
-  margin: 10px 0px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 90%;
 }
-#restaurant-container, #reviews-container {
+
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding-right: 30px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: column;
+  margin: auto;
+  justify-content: space-around;
+  align-items: baseline;
 }
-#reviews-container {
-  padding: 30px 40px 80px;
-}
-#reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
+
+#reviews-container h3 {
+  background-color: #333;
+  color: #ddd;
+  font-size: 12pt;
   font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+  letter-spacing: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2px 0;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
-  width: 90%;
 }
+
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 1px solid #333;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: auto;
+  margin-bottom: 20px;
   overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
+  padding: 10px;
   width: 85%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
-  color: #666;
+  color: black;
+  background-color: #fff;
+  font-size: 10pt;
+  font-weight: 300;
+  padding: 5px 5px;
 }
 
+#restaurant-hours td:nth-of-type(1) {
+  font-weight: bold;
+}
 
-/*================== Media queries ======================*/
-@media(min-width:200px) {
-  #reviews-container {
-     padding-left: 5px;
+#restaurant-hours td:nth-of-type(2) {
+  font-style: italic;
+  max-width: 125px;
+}
+
+#restaurant-hours {
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid #ccc;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 502px) {
+
+  .filter-selects {
+    margin: 0px 30px;
   }
 
   #restaurant-container {
-    padding-left: 5px;
-     padding: 20% 5% 0;
+    flex-flow: column;
   }
 
-  #restaurants-name {
-    margin: 25% 0 30px;
-
+  .restaurant-pretty {
+    width: 100%;
   }
 
-  #restaurants-list {
-    flex-direction: row;
-    flex-wrap: wrap;
+  .restaurant-info {
+    width: 100%;
   }
 
-  #restaurants-list li {
-    width: 70%;
-    height: 70%;
+  #restaurant-img {
+    height: 200px;
+    width: auto;
   }
 
 }
 
-@media(min-width:576px) {
-   #restaurants-name {
-     margin: 2% 0 30px;
-   }
-
-  #reviews-container {
-    padding-left: 5px;
-  }
-
-  #restaurant-container{
-    padding-left: 5px;
-  }
-
-  #restaurants-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
+@media screen and (min-width: 503px) {
 
   #restaurants-list li {
-    width: 70%;
-    height: 70%;
+    max-width: 40%;
+  }
+
+  #restaurant-address {
+    font-size: 12pt;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
 }
 
-@media(min-width:768px) {
-  #reviews-container {
-    padding-left: 5px;
-  }
+@media screen and (min-width: 900px) {
 
-  #restaurant-container {
-    padding-left: 5px;
-  }
-
-  #restaurants-list li {
-    width: 45%;
-    height: 45%;
-  }
-
-}
-
-@media(min-width:1200px) {
-
-  #restaurants-list {
-    flex-direction: row;
-    flex-wrap: wrap;
+  .container,
+  .inside {
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #restaurants-list li {
-    width: 30%;
-    height: 30%;
+    max-width: 25%;
   }
+
 }
